# std-filesystem-path-example

./: CMakeLists.txt  README.md  build-and-debug.bat  main.cpp
