# I’m only setting this as the minimum CMake version because this is the
# version that I happen to have installed at the moment. I don’t know what the
# actual minimum version for this project is.
cmake_minimum_required(VERSION 3.28.3)
project(StdFilesystemPathExample)
add_executable(StdFilesystemPathExample main.cpp)
